syntax = "proto3";

package solana.accountsdb.plugin.Account;

message account {
    bytes pubkey = 1;
    bytes owner = 2;
    uint64 lamports = 3;
    uint64 slot = 4;
    bool executable = 5;
    uint64 rent_epoch = 6;
    bytes data = 7;
    uint64 write_version = 8;
    UnixTimestamp updated_on = 9;
}

message UnixTimestamp {
    int64 timestamp = 1;
}